Fixed tag overflow and tag links

--- a/client/stylesheets/sites/_style.less
+++ b/client/stylesheets/sites/_style.less
@@ -167,3 +167,11 @@ input:not([type="submit"]):focus {
 .long-string-fix{
   word-wrap: break-word;
 }
+
+.card-tag{
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 100%;
+  white-space: nowrap;
+}
